Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
     justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 .heading {
